# scrapper

./: Cargo.toml  data.db3  my_db.db3
src/: main.rs
src/scrapper/: client.rs  db.rs  file.rs  mod.rs  scrape.rs
