[package]
name = "rust_learning"
version = "0.1.0"
authors = ["WireJunky <antonie.coetzee@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2.17", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
rusqlite = { version = "0.22.0", features = ["bundled"] }
serde_json = "1.0.51"
scraper = "0.11.0"
clap = "2.33.0"
async-trait = "0.1.30"
simple-error = "0.2.1"


